2009-11-21  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Remove AC_SEP.
	* m4/envsep.m4: Remove.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Do not generate lib/posix/Makefile.
	* lib/Makefile.am: Remove SUBDIRS.
	* lib/posix/Makefile.am: Remove.
	* lib/posix/regex.h: Overwrite...
	* lib/regex.h: ... this.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* doc/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* lib/posix/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* vms/Makefile.am: Remove AUTOMAKE_OPTIONS.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.cvs: Remove.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* m4/largefile.m4: Remove.
	* m4/lib-ld.m4: Remove.
	* m4/lib-prefix.m4: Remove.
	* m4/missing.m4: Remove.
	* m4/nls.m4: Remove.
	* m4/progtest.m4: Remove.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap: Add autopoint invocation and fetching of .po files.
	* configure.ac: Bump to GNU gettext 0.17.

	* ABOUT-NLS: Remove.
	* m4/gettext.m4: Remove.
	* m4/iconv.m4: Remove.
	* m4/lib-link.m4: Remove.
	* m4/po.m4: Remove.
	* po/*.po: Remove.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* autogen.sh: Rename to...
	* bootstrap: ... this.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap/*: Remove.
	* configure.ac: Do not create bootstrap/Makefile.
	* Makefile.am: Do not recurse into bootstrap, distribute new files.
	* Makefile.boot: Move from bootstrap/Makefile.try.
	* README-boot: Move from bootstrap/README.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* lib/Makefile.am: Distribute gettext.h.
	* lib/closeout.c: Use it.
	* lib/gettext.h: New.
	* lib/quotearg.c: Use it.
	* lib/xmalloc.c: Use it.
	* src/dfa.c: Use it.
	* src/system.h: Use it.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac.in: Rename...
	* configure.ac: ... to this.  Remove ALL_LINGUAS definition.
	* autogen.sh: Generate po/LINGUAS instead of configure.ac.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>
